--- a/src/index.jade
+++ b/src/index.jade
@@ -4,7 +4,7 @@ html
   head
     title CC
     link(rel='stylesheet',href='coffee.css')
-    script(src='http://192.168.1.101:7777/doodle.js')
+    //- script(src='http://192.168.1.101:7777/doodle.js')
     script(src='coffee-script.js')
     script(src='tmpl.js')
     script(src='codearea.js')
