--- a/page/coffee.css
+++ b/page/coffee.css
@@ -1,5 +1,5 @@
 #coffee-box {
-  width: 600px;
+  width: 800px;
   height: 300px;
   background: #ccc;
   box-shadow: 0px 0px 20px #808080;
@@ -25,7 +25,8 @@
 }
 #coffee-code,
 #coffee-result {
-  font-size: 18px;
+  font-size: 14px;
+  line-height: 20px;
   font-family: monospace;
   float: left;
   border: none;
@@ -42,17 +43,15 @@
   border-radius: 2px;
   padding: 40px 6px 100px;
 }
-#coffee-result #coffee-ctrl {
+#coffee-result {
   line-height: 30px;
+  padding: 14px 10px 60px;
 }
-#coffee-result #coffee-ctrl span {
+#coffee-result .coffee-print {
+  margin: 2px 0px;
   background: #854747;
+  border-radius: 3px;
+  padding: 4px;
   color: #fff;
-  padding: 4px 6px;
-  margin: 4px 0px;
-  font-size: 13px;
-  margin-left: 6px;
-  border-radius: 4px;
-  cursor: pointer;
-  user-select: none;
+  line-height: 18px;
 }
