--- a/src/coffee.styl
+++ b/src/coffee.styl
@@ -1,6 +1,6 @@
 
 #coffee-box
-  width 600px
+  width 800px
   height 300px
   background hsl(0,0,80)
   box-shadow 0px 0px 20px hsl(0,0,50)
@@ -25,7 +25,8 @@
     border-radius 2px
 
 #coffee-code, #coffee-result
-  font-size 18px
+  font-size 14px
+  line-height 20px
   font-family monospace
   float left
   border none
@@ -43,17 +44,13 @@
   padding 40px 6px 100px
 
 #coffee-result
-  
-  #coffee-ctrl
-    line-height 30px
+  line-height 30px
+  padding 14px 10px 60px
 
-    span
-      background hsl(0,30,40)
-      color white
-      padding 4px 6px
-      margin 4px 0px
-      font-size 13px
-      margin-left 6px
-      border-radius 4px
-      cursor pointer
-      user-select none
+  .coffee-print
+    margin 2px 0px
+    background hsl(0,30,40)
+    border-radius 3px
+    padding 4px
+    color white
+    line-height 18px
