--- a/page/coffee.css
+++ b/page/coffee.css
@@ -1,5 +1,6 @@
 #coffee-box {
   width: 800px;
+  display: block;
   height: 300px;
   background: #ccc;
   box-shadow: 0px 0px 20px #808080;
@@ -7,6 +8,8 @@
   position: absolute;
   top: 80px;
   left: 200px;
+  z-index: 7777;
+  width-space: nomal;
 }
 #coffee-box * {
   box-sizing: border-box;
@@ -23,14 +26,18 @@
   background: #e6b3b3;
   border-radius: 2px;
 }
-#coffee-code,
-#coffee-result {
+#coffee-box * {
   font-size: 14px;
   line-height: 20px;
   font-family: monospace;
-  float: left;
   border: none;
   outline: none;
+  box-shadow: none;
+  border-radius: none;
+}
+#coffee-code,
+#coffee-result {
+  float: left;
   padding: 0px;
   margin: 0px;
   width: 50%;
@@ -50,8 +57,8 @@
 #coffee-result .coffee-print {
   margin: 2px 0px;
   background: #854747;
-  border-radius: 3px;
   padding: 4px;
   color: #fff;
   line-height: 18px;
+  border-radius: 3px;
 }
