--- a/src/coffee.styl
+++ b/src/coffee.styl
@@ -1,6 +1,7 @@
 
 #coffee-box
   width 800px
+  display block
   height 300px
   background hsl(0,0,80)
   box-shadow 0px 0px 20px hsl(0,0,50)
@@ -8,6 +9,8 @@
   position absolute
   top 80px
   left 200px
+  z-index 7777
+  width-space nomal
 
   *
     box-sizing border-box
@@ -24,13 +27,17 @@
     background hsl(0,50,80)
     border-radius 2px
 
+  *
+    font-size 14px
+    line-height 20px
+    font-family monospace
+    border none
+    outline none
+    box-shadow none
+    border-radius none
+
 #coffee-code, #coffee-result
-  font-size 14px
-  line-height 20px
-  font-family monospace
   float left
-  border none
-  outline none
   padding 0px
   margin 0px
   width 50%
@@ -50,7 +57,7 @@
   .coffee-print
     margin 2px 0px
     background hsl(0,30,40)
-    border-radius 3px
     padding 4px
     color white
     line-height 18px
+    border-radius 3px
