--- a/src/coffee.styl
+++ b/src/coffee.styl
@@ -7,8 +7,8 @@
   box-shadow 0px 0px 20px hsl(0,0,50)
   box-sizing border-box
   position absolute
-  top 80px
-  left 200px
+  // top 80px
+  // left 200px
   z-index 7777
   width-space nomal
 
